--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 MQTT_BROKER_ADDRESS=192.168.1.x
 MQTT_USERNAME=admin
 MQTT_PASSWORD=password
-MQTT_TOPIC=sensor/data
+MQTT_TOPIC=home/solar/inverter1/data
 MODBUS_TCP_IP=192.168.1.x
-UPDATE_INTERVAL=5
+UPDATE_INTERVAL=2
+INVT_SERIAL_NUMBER=F12345678910
